--- a/crm_app/templates/crm/base/navbar.html
+++ b/crm_app/templates/crm/base/navbar.html
@@ -371,9 +371,15 @@
                <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">Wallet History</span>
                </a>
             </li>
-            <li class="nav-item">
+             {% comment %} <li class="nav-item">
                <a class="nav-link menu-link"  href="{% url "booking_history" %}">
                <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">Booking History</span>
+               </a>
+            </li>{% endcomment %}
+
+            <li class="nav-item">
+               <a class="nav-link menu-link"  href="{% url "visa_history" %}">
+               <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">Visa History</span>
                </a>
             </li>
 
