--- a/crm_app/templates/crm/base/header.html
+++ b/crm_app/templates/crm/base/header.html
@@ -442,6 +442,10 @@
             <h4 class="fs-22 fw-semibold ff-secondary mt-2">
                ₹<span class="" data-target="{{ wallet_balance }}">{{ wallet_balance|floatformat:2 }}</span>
            </h4>
+           <a class="dropdown-item" href="#"  data-bs-toggle="modal" data-bs-target=".bs-example-modal-sm">
+           
+            <span class="align-middle text-danger" style="margin-left:12px;">Recharge</span>
+          </a>
            
             <div class="ms-1 header-item d-none d-sm-flex">
                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
@@ -790,10 +794,7 @@
                      class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                      class="align-middle">Recharge</span></a> {% endcomment %}
 
-                     <a class="dropdown-item" href="#"  data-bs-toggle="modal" data-bs-target=".bs-example-modal-sm">
-                        <i class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i>
-                        <span class="align-middle">Recharge</span>
-                      </a>
+                     
                       
                  
                   <div class="dropdown-divider"></div>
