--- a/crm_app/templates/crm/profile.html
+++ b/crm_app/templates/crm/profile.html
@@ -51,9 +51,9 @@
                             
                             
                         </ul>
-                        <div class="flex-shrink-0">
+                        {% comment %} <div class="flex-shrink-0">
                             <a href="{% url "profile_setting" %}" class="btn btn-success"><i class="ri-edit-box-line align-bottom"></i> Edit Profile</a>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                     <!-- Tab panes -->
                     <div class="tab-content pt-4 text-muted">
