--- a/crm_app/templates/crm/base/base.html
+++ b/crm_app/templates/crm/base/base.html
@@ -43,13 +43,17 @@
       <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
    </head>
    <body>
       <!-- Begin page -->
       <div id="layout-wrapper">
          {% include "crm/base/header.html" %}
          <!-- removeNotificationModal -->
-         {% include "crm/base/notification_modal.html" %}
+          {% comment %} {% include "crm/base/notification_modal.html" %}  {% endcomment %}
          <!-- /.modal -->
          <!-- ========== App Menu ========== -->
          {% include "crm/base/navbar.html" %}
@@ -91,12 +95,12 @@
             </div>
          </div>
       </div>
-      <div class="customizer-setting d-none d-md-block">
+      <!-- <div class="customizer-setting d-none d-md-block">
          <div class="btn-primary btn-rounded shadow-lg btn btn-icon btn-lg p-2" data-bs-toggle="offcanvas"
             data-bs-target="#theme-settings-offcanvas" aria-controls="theme-settings-offcanvas">
             <i class='mdi mdi-spin mdi-cog-outline fs-22'></i>
          </div>
-      </div>
+      </div> -->
        <!--  Small modal example -->
        <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
          <div class="modal-dialog modal-sm">
@@ -193,8 +197,8 @@
       <script src="{% static "assets/js/app.js" %}"></script>
 
 
-    <script>
-        // Function to show the SweetAlert notification
+    <!-- <script>
+      
         function showWelcomeNotification() {
             Swal.fire({
                 html: '<div class="mt-3"><div class="avatar-lg mx-auto"><img src="{% static "assets/images/users/avatar-2.jpg" %}" class="rounded-circle img-thumbnail" alt="thumbnail"></div><div class="mt-4 pt-2 fs-15"><h4 class="fs-18 fw-semibold">Welcome <span class="fw-semibold">{{request.user.first_name}} {{request.user.last_name}}</span></h4><p class="text-muted mb-0 fs-13">You have <span class="fw-semibold text-success">2</span> Notifications</p></div></div>',
@@ -204,12 +208,11 @@
             });
         }
 
-        // Check if the notification has been shown
         if (!sessionStorage.getItem('notificationShown')) {
             showWelcomeNotification();
             sessionStorage.setItem('notificationShown', 'true');
         }
-    </script>
+    </script> -->
 
     <script>
       function getCookie(name) {
