--- a/crm_app/templates/crm/base/dashboard.html
+++ b/crm_app/templates/crm/base/dashboard.html
@@ -21,7 +21,7 @@
          </div>
       </div> -->
       <!-- end page title -->
-      {% if user|is_admin %}
+      {% if user|has_access:"3,4,5" %}
       <div class="news-ticker-section">
         <!-- Custom CSS for News Ticker -->
         <style>
